--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,1 +1,158 @@
-<app-blank></app-blank>
+<!-- Section -->
+<div class="section gray">
+  <div class="container">
+
+
+    <div class="row">
+      <div class="col-xl-12 col-lg-8">
+
+        <!-- Section Headline -->
+        <div class="section-headline margin-top-60 margin-bottom-35">
+          <h4>Welcome To GigPeople !!</h4>
+        </div>
+
+        <!-- Blog Post -->
+        <a href="#" class="blog-post">
+          <!-- Blog Post Thumbnail -->
+          <div class="blog-post-thumbnail">
+            <div class="blog-post-thumbnail-inner">
+              <img src="/assets/images/blog-01a.jpg" alt="">
+            </div>
+          </div>
+          <!-- Blog Post Content -->
+          <div class="blog-post-content">
+            <span class="blog-post-date">22 July 2019</span>
+            <h3>About</h3>
+            <p>Efficiently myocardinate market-driven innovation via open-source alignments. Dramatically engage
+              high-payoff infomediaries rather than. </p>
+          </div>
+          <!-- Icon -->
+          <div class="entry-icon"></div>
+        </a>
+
+        <!-- Blog Post -->
+
+
+
+
+      </div>
+
+
+
+
+    </div>
+  </div>
+
+  <!-- Spacer -->
+  <div class="padding-top-40"></div>
+  <!-- Spacer -->
+
+</div>
+<!-- Section / End -->
+
+<!-- Photo Section -->
+<div class="photo-section" data-background-image="assets/images/section-background.jpg">
+
+  <!-- Infobox -->
+  <div class="text-content white-font">
+    <div class="container">
+
+      <div class="row">
+
+
+        <div class="col-lg-6 col-md-8 col-sm-12">
+          <h2>Hire experts or be hired. <br> For any job, any time.</h2>
+          <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going
+            forward, a new normal that has evolved from generation is on the runway towards.</p>
+          <a href="/signUp" class="button button-sliding-icon ripple-effect big margin-top-20">
+            Get Started
+            <i class="icon-material-outline-arrow-right-alt"></i>
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Infobox / End -->
+
+</div>
+<!-- Photo Section / End -->
+
+
+
+<!-- Recent Blog Posts -->
+<div class="section white padding-top-0 padding-bottom-60 full-width-carousel-fix">
+  <div class="container">
+    <div class="row">
+
+      <div class="section-headline margin-top-60 margin-bottom-35">
+        <h4>&nbsp;&nbsp;Recent Gigs</h4>
+      </div>
+      <div class="col-xl-12">
+        <div class="blog-carousel">
+
+          <a href="welcome/categoryDetails" class="blog-compact-item-container">
+            <div class="blog-compact-item">
+              <img src="/assets/images/blog-04a.jpg" alt="">
+              <div class="blog-compact-item-content">
+                <ul class="blog-post-tags">
+                  <li>20 May 2019</li>
+                </ul>
+                <h3>Deliver Best Logo Design</h3>
+                <p>Distinctively reengineer revolutionary meta-services and premium architectures intuitive
+                  opportunities.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#" class="blog-compact-item-container">
+            <div class="blog-compact-item">
+              <img src="/assets/images/blog-04a.jpg" alt="">
+              <div class="blog-compact-item-content">
+                <ul class="blog-post-tags">
+                  <li>20 May 2019</li>
+                </ul>
+                <h3>Deliver Best Logo Design</h3>
+                <p>Distinctively reengineer revolutionary meta-services and premium architectures intuitive
+                  opportunities.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#" class="blog-compact-item-container">
+            <div class="blog-compact-item">
+              <img src="/assets/images/blog-04a.jpg" alt="">
+              <div class="blog-compact-item-content">
+                <ul class="blog-post-tags">
+                  <li>20 May 2019</li>
+                </ul>
+                <h3>Deliver Best Logo Design</h3>
+                <p>Distinctively reengineer revolutionary meta-services and premium architectures intuitive
+                  opportunities.</p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#" class="blog-compact-item-container">
+            <div class="blog-compact-item">
+              <img src="/assets/images/blog-04a.jpg" alt="">
+              <div class="blog-compact-item-content">
+                <ul class="blog-post-tags">
+                  <li>20 May 2019</li>
+                </ul>
+                <h3>Deliver Best Logo Design</h3>
+                <p>Distinctively reengineer revolutionary meta-services and premium architectures intuitive
+                  opportunities.</p>
+              </div>
+            </div>
+          </a>
+
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Recent Blog Posts / End -->
