--- a/src/app/me/components/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/src/app/me/components/dashboard-sidebar/dashboard-sidebar.component.html
@@ -32,19 +32,12 @@
             <li [routerLink]="'reviews'" routerLinkActive="active">
               <a href="#"><i class="icon-material-outline-rate-review"></i> Reviews</a>
             </li>
+
+            <li [routerLink]="'post-task'" routerLinkActive="active">
+              <a href="#"><i class="icon-material-outline-rate-review"></i>Post a Task</a>
+            </li>
           </ul>
           
-          <ul data-submenu-title="Tasks">
-            <li [routerLink]="'manage-tasks'" routerLinkActive="active">
-              <a href="#">Manage Tasks <span class="nav-tag">2</span></a>
-            </li>
-            <li [routerLink]="'my-active-bids'" routerLinkActive="active">
-              <a href="#">My Active Bids <span class="nav-tag">4</span></a>
-            </li>
-            <li [routerLink]="'post-task'" routerLinkActive="active">
-              <a href="#">Post a Task</a>
-            </li>
-          </ul>
 
           <ul data-submenu-title="Account">
             <li [routerLink]="'settings'" routerLinkActive="active"><a href="#"><i class="icon-material-outline-settings"></i>Settings</a></li>
