--- a/src/global.scss
+++ b/src/global.scss
@@ -40,6 +40,6 @@ ion-textarea{
   border: 1px solid lightgrey;
 }
 
-a:hover{
-    text-decoration: none;
+a:hover {
+    text-decoration: none !important;
 }
