code structure clean

--- a/src/app/browse/list/list.component.html
+++ b/src/app/browse/list/list.component.html
@@ -21,7 +21,7 @@
 <div class="tasks-list-container compact-list margin-top-35">
   <!-- Task -->
   <a *ngFor="let task of tasks; let i=index;"
-  [routerLink] = "'/tasks/single-task/'+task._id"
+  [routerLink] = "'/single-task/'+task._id"
   class="task-listing">
 
     <!-- Job Listing Details -->
