--- a/src/app/1/shared/update-bid/update-bid.component.html
+++ b/src/app/1/shared/update-bid/update-bid.component.html
@@ -32,6 +32,6 @@
       <span>Submit</span>
     </button>
   </div>
-  <div class="bidding-signup">Don't have an account? <a [routerLink]="'../../../../signup'"
+  <div class="bidding-signup">Don't have an account? <a [routerLink]="'/signup'"
       class="register-tab sign-in popup-with-zoom-anim">Sign Up</a></div>
 </form>
