--- a/src/app/browse/browse.page.html
+++ b/src/app/browse/browse.page.html
@@ -7,7 +7,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xl-3 col-lg-4">
-      <button class="button" style="width: 100%; margin: 50px 0px;" [routerLink]="'../../../me/post-task'">Post a Task</button>
+      <button class="button" style="width: 100%; margin: 50px 0px;" [routerLink]="'/me/post-task'">Post a Task</button>
       <app-search></app-search>
     </div>
     <div class="col-xl-9 col-lg-8 content-left-offset">
