--- a/src/app/my-tasks/freelancer/list2/list2.component.html
+++ b/src/app/my-tasks/freelancer/list2/list2.component.html
@@ -16,7 +16,7 @@
         <!-- <tr *ngFor="let task of tasks; let i=index;">
           <th scope="row">{{i+1}}</th>
           <td>
-            <a [routerLink]="'/tasks/single-task/'+task._id">{{task.title}}</a>
+            <a [routerLink]="'/single-task/'+task._id">{{task.title}}</a>
           </td>
           <td></td>
           <td></td>
