--- a/src/app/single-task/single-task.page.html
+++ b/src/app/single-task/single-task.page.html
@@ -1,7 +1,7 @@
 <!-- Titlebar
 ================================================== -->
 <ion-spinner *ngIf="isLoading"></ion-spinner>
-<div *ngIf="!isLoading" class="single-page-header" data-background-image="assets/images/single-task.jpg">
+<div *ngIf="!isLoading" class="single-page-header">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -19,11 +19,16 @@
             </div>
           </div>
         </div>
+
+        <ul ngbNav class="nav-tabs" [activeId]="router.url.split('/').pop()">
+          <li [ngbNavItem]="link.url" *ngFor="let link of links">
+            <a ngbNavLink [routerLink]="link.url">{{ link.title }}</a>
+          </li>
+        </ul>
+
       </div>
     </div>
   </div>
 </div>
 
-
-
-<router-outlet></router-outlet>
+<router-outlet *ngIf="!isLoading"></router-outlet>
