--- a/src/app/single-task/bids/bids.component.html
+++ b/src/app/single-task/bids/bids.component.html
@@ -40,9 +40,9 @@
     </div>
     <ion-toolbar>
       <button mat-raised-button slot="end" color="primary" class="margin-right-20"
-      (click)="onClickAward(bid)">Chat</button>
+      (click)="onClickAward(bid)">Award</button>
       <button mat-raised-button slot="end" color="accent"
-      (click)="onClickChat(bid)">Award</button>
+      (click)="onClickChat(bid)">Chat</button>
     </ion-toolbar>
 
   </mat-card>
