--- a/src/app/1/shared/header/header.component.html
+++ b/src/app/1/shared/header/header.component.html
@@ -57,144 +57,13 @@
         <!--  User Notifications -->
         <div class="header-widget hide-on-mobile">
 
-          <!-- Notifications -->
-          <div class="header-notifications">
+          <app-badge-notify style="margin-right: 1rem;" [isDropDown]="menuId==mids.notify" (handleClickIcon)="menuId= (menuId==mids.notify)?mids.off:mids.notify;"
+            (handleMouseLeave)="menuId=mids.off"
+          ></app-badge-notify>
 
-            <!-- Trigger -->
-            <div class="header-notifications-trigger">
-              <a href="#"><i class="icon-feather-bell"></i><span>4</span></a>
-            </div>
-
-            <!-- Dropdown -->
-            <div class="header-notifications-dropdown">
-
-              <div class="header-notifications-headline">
-                <h4>Notifications</h4>
-                <button class="mark-as-read ripple-effect-dark" title="Mark all as read" data-tippy-placement="left">
-                  <i class="icon-feather-check-square"></i>
-                </button>
-              </div>
-
-              <div class="header-notifications-content">
-                <div class="header-notifications-scroll" data-simplebar>
-                  <ul>
-                    <!-- Notification -->
-                    <li class="notifications-not-read">
-                      <a href="dashboard-manage-candidates.html">
-                        <span class="notification-icon"><i class="icon-material-outline-group"></i></span>
-                        <span class="notification-text">
-                          <strong>Michael Shannah</strong> applied for a job <span class="color">Full Stack Software
-                            Engineer</span>
-                        </span>
-                      </a>
-                    </li>
-
-                    <!-- Notification -->
-                    <li>
-                      <a href="dashboard-manage-bidders.html">
-                        <span class="notification-icon"><i class=" icon-material-outline-gavel"></i></span>
-                        <span class="notification-text">
-                          <strong>Gilbert Allanis</strong> placed a bid on your <span class="color">iOS App Development</span>
-                          project
-                        </span>
-                      </a>
-                    </li>
-
-                    <!-- Notification -->
-                    <li>
-                      <a href="dashboard-manage-jobs.html">
-                        <span class="notification-icon"><i class="icon-material-outline-autorenew"></i></span>
-                        <span class="notification-text">
-                          Your job listing <span class="color">Full Stack PHP Developer</span> is expiring.
-                        </span>
-                      </a>
-                    </li>
-
-                    <!-- Notification -->
-                    <li>
-                      <a href="dashboard-manage-candidates.html">
-                        <span class="notification-icon"><i class="icon-material-outline-group"></i></span>
-                        <span class="notification-text">
-                          <strong>Sindy Forrest</strong> applied for a job <span class="color">Full Stack Software
-                            Engineer</span>
-                        </span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-            </div>
-
-          </div>
-
-          <!-- Messages -->
-          <div class="header-notifications">
-            <div class="header-notifications-trigger">
-              <a href="#"><i class="icon-feather-mail"></i><span>3</span></a>
-            </div>
-
-            <!-- Dropdown -->
-            <div class="header-notifications-dropdown">
-
-              <div class="header-notifications-headline">
-                <h4>Messages</h4>
-                <button class="mark-as-read ripple-effect-dark" title="Mark all as read" data-tippy-placement="left">
-                  <i class="icon-feather-check-square"></i>
-                </button>
-              </div>
-
-              <div class="header-notifications-content">
-                <div class="header-notifications-scroll" data-simplebar>
-                  <ul>
-                    <!-- Notification -->
-                    <li class="notifications-not-read">
-                      <a href="dashboard-messages.html">
-                        <span class="notification-avatar status-online"><img src="assets/images/user-avatar-small-03.jpg"
-                            alt=""></span>
-                        <div class="notification-text">
-                          <strong>David Peterson</strong>
-                          <p class="notification-msg-text">Thanks for reaching out. I'm quite busy right now on many...</p>
-                          <span class="color">4 hours ago</span>
-                        </div>
-                      </a>
-                    </li>
-
-                    <!-- Notification -->
-                    <li class="notifications-not-read">
-                      <a href="dashboard-messages.html">
-                        <span class="notification-avatar status-offline"><img src="assets/images/user-avatar-small-02.jpg"
-                            alt=""></span>
-                        <div class="notification-text">
-                          <strong>Sindy Forest</strong>
-                          <p class="notification-msg-text">Hi Tom! Hate to break it to you, but I'm actually on vacation
-                            until...</p>
-                          <span class="color">Yesterday</span>
-                        </div>
-                      </a>
-                    </li>
-
-                    <!-- Notification -->
-                    <li class="notifications-not-read">
-                      <a href="dashboard-messages.html">
-                        <span class="notification-avatar status-online"><img src="assets/images/user-avatar-placeholder.png"
-                            alt=""></span>
-                        <div class="notification-text">
-                          <strong>Marcin Kowalski</strong>
-                          <p class="notification-msg-text">I received payment. Thanks for cooperation!</p>
-                          <span class="color">Yesterday</span>
-                        </div>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-              <a href="dashboard-messages.html" class="header-notifications-button ripple-effect button-sliding-icon">View All
-                Messages<i class="icon-material-outline-arrow-right-alt"></i></a>
-            </div>
-          </div>
-
+          <app-badge-chat [isDropDown]="menuId==mids.chat" (handleClickIcon)="menuId= (menuId==mids.chat)?mids.off:mids.chat;"
+            (handleMouseLeave)="menuId=mids.off"
+          ></app-badge-chat>
         </div>
         <!--  User Notifications / End -->
 
@@ -202,18 +71,16 @@
         <div class="header-widget">
 
           <!-- Messages -->
-          <div class="header-notifications user-menu" [ngClass]="isUserMenu?'active':''"
-           (mouseenter)="isUserMenu=true" (mouseleave)="isUserMenu=false"
-          >
+          <div class="header-notifications user-menu" [ngClass]="menuId==mids.user?'active':''">
             <div class="header-notifications-trigger">
-              <a href="#" (click)="toggleUserMenu()">
+              <a href="#" (click)="menuId=(menuId==mids.user)?mids.off:mids.user;; false;">
                 <img width="50px" height="50px" style="border-radius: 20%;"
                 [src]="me?.avatar || 'assets/images/user-avatar-placeholder.png'" alt="">
               </a>
             </div>
 
             <!-- Dropdown -->
-            <div class="header-notifications-dropdown">
+            <div class="header-notifications-dropdown" (mouseleave)="menuId=mids.off">
 
               <!-- User Status -->
               <div class="user-status">
@@ -225,7 +92,7 @@
                   <div class="user-name">
                     {{me?.firstName}} {{me?.lastName}}
                   </div>
-                  
+
                 </div>
 
               </div>
@@ -256,12 +123,12 @@
 
       <!-- Right Side Content / End -->
       <div class="right-side" [style.display]="!userIsAuthenticated?'block':'none'">
-      
+
         <div class="header-widget">
           <a [routerLink]="['/login']" class="log-in-button"><i class="icon-feather-log-in"></i> <span>Log
               In / Register</span></a>
         </div>
-      
+
         <!-- Mobile Navigation Button -->
         <span class="mmenu-trigger">
           <button class="hamburger hamburger--collapse" type="button">
